--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-plus": "^2.4.4",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
+    "vue-gallery-slideshow": "^1.5.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
