这是初始版本！！！

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-gallery-slideshow": "^1.5.2",
+    "vue-photo-preview": "^1.1.3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
