--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-gallery-slideshow": "^1.5.2",
-    "vue-photo-preview": "^1.1.3",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-puzzle-vcode": "^1.1.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
